@@ -1,7 +1,7 @@
-dnl $Id$
+dnl $Id: configure.ac 57738 2021-02-14 18:51:30Z karl $
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright 2015-2020 Karl Berry <tex-live@tug.org>
+dnl   Copyright 2015-2021 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
