@@ -1,3 +1,7 @@
+2021-02-14  Petr Olsak  <petr@olsak.net>
+
+	* tracingstacklevels.ch: slow_print(cur_ext) also.
+
 2021-02-13  Karl Berry  <karl@freefriends.org>
 
 	* enctexdir/enctex1.ch,
